package PS;
import "proto/neural_network.proto";
import "proto/linear_method.proto";

message AppConfig {
  optional string app_name = 1;
  repeated string parameter_name = 2;
  optional LM.Config linear_method = 3;
  optional NN.Config neural_network = 4;
}
